--- a/scss/components/_search.scss
+++ b/scss/components/_search.scss
@@ -12,10 +12,12 @@
       }
     }
   }
+  
   // Remove border and margin
   > details {
     border: none;
     margin-top: 0;
+    
     // style summary border
     > summary {
       border-width: 0 0 1px 0;
@@ -28,10 +30,11 @@
 
   //wide screen
   @include responsive($lg-min) {
-     //Remove the `details` disclosure triangle
+    //Remove the `details` disclosure triangle
     > details {
       &.block-search-api-saved-searches[open] {
         border: 1px solid var(--bs-gray-300);
+        
         > summary {
           list-style: none;
           padding-left: 0;
@@ -39,6 +42,7 @@
           background-color: transparent;
           // disable expand/collapse details element
           pointer-events: none;
+          
           // add search icon
           &::before {
             font-family: "bootstrap-icons";
@@ -47,17 +51,19 @@
           }
         }
       }
+      
       // remove border for search filters
       &.dc-search-filters {
         border: none;
+        
         > summary {
           display: none;
         }
       }
     }
   }
-
 }
+
 .facets-widget-links {
   a,
   a:active,
@@ -72,70 +78,77 @@
   }
 }
 
-
 .bcbb-search-wrapper {
-
- .view-site-search {
-  .form-actions {
-   @extend .d-grid;
-   @extend .gap-2;
-   @extend .d-lg-flex;
-   input {
-    @extend .btn;
-    @extend .btn-light;
-    @extend .btn-sm;
-    @extend .m-0;
-   }
+  .view-site-search {
+    .form-actions {
+      @extend .d-grid;
+      @extend .gap-2;
+      @extend .d-lg-flex;
+      
+      input {
+        @extend .btn;
+        @extend .btn-light;
+        @extend .btn-sm;
+        @extend .m-0;
+      }
+    }
+    
+    .form-type-checkbox {
+      margin-top: .125em;
+    }
   }
-  .form-type-checkbox {
-    margin-top: .125em;
-   }
- }
 
- .bcbb-current-search-facets {
-  list-style-type: none;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  gap: .25em 1.5em;
-  align-items: flex-start;
-  justify-content: flex-start;
+  .bcbb-current-search-facets {
+    list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: .25em 1.5em;
+    align-items: flex-start;
+    justify-content: flex-start;
+    
     li {
       flex-basis: content;
     }
-  li.facet-summary-item--clear {
-    margin-left: -1.5em !important;
-    a {
-      @include icon-cancel($colorWhite);
-      background-position: .5em center;
-      background-repeat: no-repeat;
-      background-size: 1em 1em;
-      text-decoration: none;
+    
+    li.facet-summary-item--clear {
+      margin-left: -1.5em !important;
+      
+      a {
+        @include icon-cancel($colorWhite);
+        background-position: .5em center;
+        background-repeat: no-repeat;
+        background-size: 1em 1em;
+        text-decoration: none;
+      }
+      
+      a,
+      a:active,
+      a:visited {
+        background-color: $colorAlert-error;
+        transition: background-color 0.15s ease-in-out;
+        color: $colorWhite;
+        border-radius: var(--bs-border-radius-pill) !important;
+        padding: .15em .75em .15em 2em;
+        text-decoration: none;
+      }
+      
+      a:hover,
+      a:focus,
+      a:focus-within {
+        background-color: #711b18;
+      }
     }
-    a,
-    a:active,
-    a:visited {
-      background-color: $colorAlert-error;
-      transition: background-color 0.15s ease-in-out;
-      color: $colorWhite;
-      border-radius: var(--bs-border-radius-pill) !important;
-      padding: .15em .75em .15em 2em;
-      text-decoration: none;
-    }
-    a:hover,
-    a:focus,
-    a:focus-within {
-      background-color: #711b18;
+    
+    @include responsive($lg-min) {
+      flex-direction: row;
     }
   }
-  @include responsive($lg-min){
-    flex-direction: row;
-  }
- }
 
   .block-region-sidebar-bottom {
     @extend .bcbb-dividers;
   }
+  
   .vbo-info-list-wrapper {
     h3 {
       @extend .h5;
@@ -148,12 +161,15 @@
         @include responsive($lg-min) {
           display: flex;
         }
+        
         .form-item-search-api-fulltext {
           width: 100%;
         }
+        
         .form-actions {
           text-align: right;
           white-space: nowrap;
+          
           > button {
             margin: 0;
           }
@@ -161,12 +177,10 @@
       }
     }
   }
-
 }
 
 // grid layout for search results
 .search-bb-container {
-
   @include responsive($lg-min) {
     display: grid;
     grid-template-columns: 7fr 1fr 4fr;
@@ -174,9 +188,8 @@
     grid-template-areas:
       "search-block . sidebar-right"
       "results      . sidebar-right"
-      "results      . sidebar-right"
+      "results      . sidebar-right";
   }
-
 }
 
 .search-bb-search-block {
@@ -191,47 +204,56 @@
   grid-area: sidebar-right;
 }
 
-
-
 // search block in the header region
 
 .block-bcbb-search {
-
   //reset spacing
   * {
     padding: 0;
     margin: 0;
   }
-  position: relative;
-  .btn {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    margin-right: 0;
-    border-radius: 0 var(--bs-btn-border-radius) var(--bs-btn-border-radius) 0;
-    color: $colorWhite;
-    background-color: $colorBrand-secondary-a11y;
-    border-color: $colorBrand-secondary-a11y;
-    &:hover,
-    &:focus {
-      background-color: mix($colorBrand-secondary-a11y, $colorBlack, 85%);
-      border-color: mix($colorBrand-secondary-a11y, $colorBlack, 85%);
+
+  form {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    
+    // hide all the hidden inputs so they don't mess with grid
+    .bcbb-input-wrapper:has(input[type="hidden"]) {
+      display: none;
+    }
+    
+    input[name="search_keyword"] {
+      border-radius: var(--bs-border-radius) 0 0 var(--bs-border-radius);
+      border-right: none;
+    }
+    
+    // style the input button
+    .btn {
+      background-color: transparent;
+      border-color: $colorInputBorder;
+      border-left: none;
+      border-radius: 0 var(--bs-btn-border-radius) var(--bs-btn-border-radius) 0;
+      
+      &:hover,
+      &:focus {
+        background-color: $colorInputBorder;
+      }
     }
   }
 }
 
-
 // search submit using an icon
-
 input.bcbb-search-submit-icon {
-  $iconColor: $colorWhite;
+  $iconColor: $colorBlack;
   text-indent: -9999px;
   width: 2.6em;
+  
   // build the icon
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' shape-rendering='geometricPrecision' width='50' height='50' fill='#{svg-color($iconColor)}' viewBox='0 0 16 16' opacity='1'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0'/%3E%3C/svg%3E%0A");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 60% 60%;
+  
   // opacity on hover
   &:hover,
   &:focus {
