--- a/scss/components/_search.scss
+++ b/scss/components/_search.scss
@@ -158,20 +158,24 @@
   .search-bb-search-block {
     .views-exposed-form {
       .form--inline {
-        @include responsive($lg-min) {
-          display: flex;
+        display: grid;
+        grid-template-columns: 1fr auto;
+        .form-item {
+          float: none;
+          margin-right: 0;
         }
-        
-        .form-item-search-api-fulltext {
-          width: 100%;
+        .form-text {
+          $iconColor: $colorBlack;
+          border-radius: var(--bs-border-radius) 0 0 var(--bs-border-radius);
+          background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' shape-rendering='geometricPrecision' width='50' height='50' fill='#{svg-color($iconColor)}' viewBox='0 0 16 16' opacity='.75'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0'/%3E%3C/svg%3E%0A");
+          background-repeat: no-repeat;
+          background-size: 1em 1em;
+          padding-left: 2em;
+          background-position: .5em center;
         }
-        
         .form-actions {
-          text-align: right;
-          white-space: nowrap;
-          
-          > button {
-            margin: 0;
+          input.btn {
+            border-radius: 0 var(--bs-border-radius) var(--bs-border-radius) 0;
           }
         }
       }
