--- a/css/style.css
+++ b/css/style.css
@@ -15804,22 +15804,24 @@ h1.page-title::after, .page-title.h1::after {
             flex-direction: row;
   }
 }
-@media only screen and (min-width: 992px) {
-  .bcbb-search-wrapper .search-bb-search-block .views-exposed-form .form--inline {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
+.bcbb-search-wrapper .search-bb-search-block .views-exposed-form .form--inline {
+  display: grid;
+  grid-template-columns: 1fr auto;
 }
-.bcbb-search-wrapper .search-bb-search-block .views-exposed-form .form--inline .form-item-search-api-fulltext {
-  width: 100%;
+.bcbb-search-wrapper .search-bb-search-block .views-exposed-form .form--inline .form-item {
+  float: none;
+  margin-right: 0;
 }
-.bcbb-search-wrapper .search-bb-search-block .views-exposed-form .form--inline .form-actions {
-  text-align: right;
-  white-space: nowrap;
+.bcbb-search-wrapper .search-bb-search-block .views-exposed-form .form--inline .form-text {
+  border-radius: var(--bs-border-radius) 0 0 var(--bs-border-radius);
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' shape-rendering='geometricPrecision' width='50' height='50' fill='%23000' viewBox='0 0 16 16' opacity='.75'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0'/%3E%3C/svg%3E%0A");
+  background-repeat: no-repeat;
+  background-size: 1em 1em;
+  padding-left: 2em;
+  background-position: 0.5em center;
 }
-.bcbb-search-wrapper .search-bb-search-block .views-exposed-form .form--inline .form-actions > button {
-  margin: 0;
+.bcbb-search-wrapper .search-bb-search-block .views-exposed-form .form--inline .form-actions input.btn, .bcbb-search-wrapper .search-bb-search-block .views-exposed-form .form--inline .form-actions input.button, .bcbb-search-wrapper .search-bb-search-block .views-exposed-form .form--inline .form-actions .node-preview-container input.node-preview-backlink, .node-preview-container .bcbb-search-wrapper .search-bb-search-block .views-exposed-form .form--inline .form-actions input.node-preview-backlink, .bcbb-search-wrapper .search-bb-search-block .views-exposed-form .form--inline .view-site-search .form-actions input, .bcbb-search-wrapper .view-site-search .search-bb-search-block .views-exposed-form .form--inline .form-actions input {
+  border-radius: 0 var(--bs-border-radius) var(--bs-border-radius) 0;
 }
 
 @media only screen and (min-width: 992px) {
