Issue #20: Update colours to align with BC official Design Guidelines for the BC Visual Identity Program

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,8 +2,8 @@
 // see https://developer.gov.bc.ca/Design-System/Colour-Palette
 
 // primary B.C. brand
-$colorBrand-primary: #003366;
-$colorBrand-secondary: #fcba19;
+$colorBrand-primary: #234075;
+$colorBrand-secondary: #e3a82b;
 $colorBrand-secondary-a11y: #a36b00;
 
 // B.C. brand variants
