--- a/scss/style.scss
+++ b/scss/style.scss
@@ -48,6 +48,7 @@
   './components/buttons_links',
   './components/nav_site',
   './components/views',
+  './components/header',
   './components/containers'
   ;
 
