--- a/css/ck5style.css
+++ b/css/ck5style.css
@@ -13487,9 +13487,6 @@ a > .ck-content code {
   max-width: 100%;
   max-height: auto;
 }
-.ck-content html.bcbb-theme .bcbb-header {
-  border-bottom: 0.125em solid rgb(217, 217, 217);
-}
 .ck-content html.bcbb-theme main {
   color: rgba(49, 49, 50, 0.9);
 }
@@ -15014,19 +15011,6 @@ a > .ck-content code {
     margin-top: 3.5em;
   }
 }
-.ck-content .bcbb-theme .bb-link-light {
-  color: #fff;
-  background-color: transparent;
-  border: 0;
-  font-size: 0.87em;
-  text-decoration: none;
-}
-.ck-content .bcbb-theme .bb-link-light:hover, .ck-content .bcbb-theme .bb-link-light:focus {
-  opacity: 80%;
-  -webkit-transition: all 0.15s ease-in-out;
-  transition: all 0.15s ease-in-out;
-  text-decoration: underline;
-}
 .ck-content .bcbb-theme .button {
   --bs-btn-color: #313132;
   --bs-btn-bg: #f2f2f2;
@@ -15079,11 +15063,38 @@ a > .ck-content code {
   margin-left: 0;
   margin-right: 0;
 }
-.ck-content a img.site-logo {
-  max-height: 60px;
+.ck-content html.bcbb-theme a img.site-logo {
+  height: 50px;
+  max-height: 70px;
+}
+@media only screen and (min-width: 576px) {
+  .ck-content html.bcbb-theme a img.site-logo {
+    height: 70px;
+  }
+}
+.ck-content html.bcbb-theme nav ul.navbar-nav a.nav-link, .ck-content html.bcbb-theme nav ul.navbar-nav .media-library-view--widget .view-header a, .ck-content .media-library-view--widget .view-header html.bcbb-theme nav ul.navbar-nav a {
+  color: #1a5a96;
+}
+.ck-content html.bcbb-theme nav ul.navbar-nav a.nav-link:hover, .ck-content html.bcbb-theme nav ul.navbar-nav .media-library-view--widget .view-header a:hover, .ck-content .media-library-view--widget .view-header html.bcbb-theme nav ul.navbar-nav a:hover, .ck-content html.bcbb-theme nav ul.navbar-nav a.nav-link:focus, .ck-content html.bcbb-theme nav ul.navbar-nav .media-library-view--widget .view-header a:focus, .ck-content .media-library-view--widget .view-header html.bcbb-theme nav ul.navbar-nav a:focus {
+  color: #10365a;
+}
+.ck-content html.bcbb-theme nav ul.navbar-nav a.nav-link:active, .ck-content html.bcbb-theme nav ul.navbar-nav .media-library-view--widget .view-header a:active, .ck-content .media-library-view--widget .view-header html.bcbb-theme nav ul.navbar-nav a:active, .ck-content html.bcbb-theme nav ul.navbar-nav a.nav-link:visited, .ck-content html.bcbb-theme nav ul.navbar-nav .media-library-view--widget .view-header a:visited, .ck-content .media-library-view--widget .view-header html.bcbb-theme nav ul.navbar-nav a:visited {
+  color: #1a5a96;
 }
 .ck-content .feed-icons {
   margin-bottom: 1.5em;
+}
+.ck-content .bcbb-header {
+  border-bottom: 1px solid rgb(217, 217, 217);
+}
+.ck-content .bcbb-header .bcbb-header-branding.bcbb-header-search {
+  display: grid;
+  grid-template-columns: -webkit-max-content 1fr;
+  grid-template-columns: max-content 1fr;
+  gap: 1em;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .ck-content .well {
   min-height: 20px;
